--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
     "icons": [{
       "src": "icon.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     }]
   }
