--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Hunter's Cached HTML Launcher",
+    "name": "HCHL (New Domain)",
     "short_name": "HCHL (New Domain)",
     "start_url": ".",
     "display": "fullscreen",
