--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,18 @@
     "display": "fullscreen",
     "background_color": "black",
     "description": "Run local HTML without the restrictions of the file:// view!",
-    "icons": [{
+    "icons": [
+    {
+      "src": "icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
       "src": "icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
-    }]
+    }
+    ]
   }
